fixed spacing issues for add new task + fixed readme

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+
 /* APP */
 .App{
   font-family: "Poppins";
@@ -7,9 +8,12 @@
 
 /* NAV */
 .menu-drop a{
-  color: #343434 !important;
+  color: #484848 !important;
   text-decoration: none !important;
   font-size:13px;
+}
+.menu-drop a:hover{
+  color: #091c5e !important;
 }
 .menuButton{
   margin-top:-10px;
@@ -49,14 +53,17 @@
   height:50vh;
 }
 
+.taskBarWrapper{
+  width:100%;
+}
+
 .addTaskInput{
   border-radius: 10px;
   border: 0px;
+  width:100%;
   background-color: #EEEEEE;
-  width:88%;
   padding: 5px 10px;
   font-size:13px;
-  margin-right:10px;
   display:inline !important;
 }
 
@@ -64,10 +71,14 @@
   border-radius: 15px;
   border: 0px;
   background-color:#CCCCCC;
-  padding:3px 10px;
+  padding:5px 10px;
   color: #686868;
   font-size:13px;
   display:inline !important;
+}
+
+.taskButtonWrapper{
+  padding-left:0px !important;
 }
 
 .taskList{
@@ -83,7 +94,6 @@
 .taskName{
   font-size:15px;
 }
-
 
 .card{
     padding:10px;
